2009-02-26  Carol Szabo  <carol.szabo@nokia.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=24099
        ARM Compiler Warnings in pcre_exec.cpp

        * pcre/pcre_exec.cpp:
        (match):

Canonical link: https://commits.webkit.org/33327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41252 268f45cc-cd09-0410-ab3c-d52691b4dbfc